Path should be relative path and stringify

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -129,7 +129,7 @@ footer {
 
 .sec1 {
   height: 100vh;
-  background-image: url(/img/aboutus.jpg);
+  background-image: url("../img/aboutus.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
